force-app/main/default/objects/Billing_Assessment__c/fields/Env_PartnerCommunity__c.field-meta.xml
<CustomField>
    <fullName>Env_PartnerCommunity__c</fullName>
    <inlineHelpText>Do you have Partners, Dealers or Resellers that us a partner community to product quotes?  If not, just enter NO. 
If you do, please describe any differences between partner quotes and internal quotes (i.e., do they need to include the partner&apos;s logo).</inlineHelpText>
    <label>Do External Users Produce Quotes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>