force-app/main/default/objects/Billing_Assessment__c/fields/Env_ServiceCloudFunctions__c.field-meta.xml
<CustomField>
    <fullName>Env_ServiceCloudFunctions__c</fullName>
    <inlineHelpText>When a sale is Closed Won, CPQ can automatically creates contracts, subscriptions and assets for the purchased products using two different processes. How this is designed and configured depends on whether Service Cloud is enabled.</inlineHelpText>
    <label>Service Cloud Functions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No plans for these</fullName>
            </value>
            <value>
                <fullName>Service Contracts and Contract Line Items</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>