force-app/main/default/objects/Billing_Assessment__c/fields/Env_UsersQuotingNow__c.field-meta.xml
<CustomField>
    <fullName>Env_UsersQuotingNow__c</fullName>
    <inlineHelpText>Number of users producing quotes currently (or at go-live if this is for a new offering).</inlineHelpText>
    <label>Users - Quoting Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>