force-app/main/default/objects/Billing_Assessment__c/fields/Env_UsersQuotingYear__c.field-meta.xml
<CustomField>
    <fullName>Env_UsersQuotingYear__c</fullName>
    <inlineHelpText>Anticipated number of users producing quotes a year after go live.</inlineHelpText>
    <label>Users - Quoting in a Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>