force-app/main/default/objects/Billing_Assessment__c/fields/ERP_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_System__c</fullName>
    <inlineHelpText>What is your current ERP system?</inlineHelpText>
    <label>ERP System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>