force-app/main/default/objects/Billing_Assessment__c/fields/Evergreen_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Contracts__c</fullName>
    <inlineHelpText>Do you have contracts that are setup as Evergreen/Automatically renewed?</inlineHelpText>
    <label>Evergreen Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>