force-app/main/default/objects/Billing_Assessment__c/fields/Failed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Failed_Payments__c</fullName>
    <label>Failed Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>