force-app/main/default/objects/Billing_Assessment__c/fields/FulfillmentSystemandProcess__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentSystemandProcess__c</fullName>
    <inlineHelpText>What system supports order fulfillment?  Are integrations in place to get data into this system or are orders manually reentered?</inlineHelpText>
    <label>Fulfillment System and Process</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>