force-app/main/default/objects/Billing_Assessment__c/fields/Fullfillment_Integrations_with_SF__c.field-meta.xml
<CustomField>
    <fullName>Fullfillment_Integrations_with_SF__c</fullName>
    <inlineHelpText>Is there a current integration between SF and your RevRec System?</inlineHelpText>
    <label>Integrations with SF</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>