force-app/main/default/objects/Billing_Assessment__c/fields/Future_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Future_Payment_Gateway__c</fullName>
    <label>Future Payment Gateway</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>