force-app/main/default/objects/Billing_Assessment__c/fields/Future_Rev_Rec_System_Process__c.field-meta.xml
<CustomField>
    <fullName>Future_Rev_Rec_System_Process__c</fullName>
    <inlineHelpText>Do you have any planned accounting policy changes in the future? If so, when? What specifically is changing?</inlineHelpText>
    <label>Future Rev Rec System/Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>