force-app/main/default/objects/Billing_Assessment__c/fields/Future_Taxation_Process__c.field-meta.xml
<CustomField>
    <fullName>Future_Taxation_Process__c</fullName>
    <label>Future Taxation Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>