force-app/main/default/objects/Billing_Assessment__c/fields/GL_Integration__c.field-meta.xml
<CustomField>
    <fullName>GL_Integration__c</fullName>
    <inlineHelpText>What integration approach is expected for loading charges, invoices, payments, and adjustments into GL platform (ERP/FMS)?</inlineHelpText>
    <label>GL Integration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>