force-app/main/default/objects/Billing_Assessment__c/fields/GL_Rule__c.field-meta.xml
<CustomField>
    <fullName>GL_Rule__c</fullName>
    <description>Record Tax, Recognize Revenue, Post Invoice</description>
    <label>GL Rule</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>