force-app/main/default/objects/Billing_Assessment__c/fields/GL_System__c.field-meta.xml
<CustomField>
    <fullName>GL_System__c</fullName>
    <inlineHelpText>Where is General Ledger managed?</inlineHelpText>
    <label>GL System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>