force-app/main/default/objects/Billing_Assessment__c/fields/GL_Treatment__c.field-meta.xml
<CustomField>
    <fullName>GL_Treatment__c</fullName>
    <inlineHelpText>Cash, A/R, Deferred Rev, Earned Rev</inlineHelpText>
    <label>GL Treatment</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>