force-app/main/default/objects/Billing_Assessment__c/fields/Global_Tax__c.field-meta.xml
<CustomField>
    <fullName>Global_Tax__c</fullName>
    <inlineHelpText>Do you have global tax requirements? (i.e. VAT, Country Managed to avoid Tax Fraud)</inlineHelpText>
    <label>Global Tax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>