force-app/main/default/objects/Billing_Assessment__c/fields/GoLiveTargetConsiderations__c.field-meta.xml
<CustomField>
    <fullName>GoLiveTargetConsiderations__c</fullName>
    <inlineHelpText>What&apos;s the target date for implementing the new CPQ process?  What&apos;s driving the target date (fiscal year, other CPQ licenses expiring...)?</inlineHelpText>
    <label>Go Live Target &amp; Considerations</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>