force-app/main/default/objects/Billing_Assessment__c/fields/Integration_to_Print_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Integration_to_Print_Vendor__c</fullName>
    <label>Integration to Print Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>