force-app/main/default/objects/Billing_Assessment__c/fields/Invoice_Delivery_Methods__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Methods__c</fullName>
    <label>Invoice Delivery Methods?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>