force-app/main/default/objects/Billing_Assessment__c/fields/Invoice_Templates__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Templates__c</fullName>
    <inlineHelpText>Describe different invoice/statement templates do you support? (Templates per customer set: B2C, B2B, Enterprise)</inlineHelpText>
    <label>Invoice Templates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>