force-app/main/default/objects/Billing_Assessment__c/fields/Invoicing_Process__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Process__c</fullName>
    <inlineHelpText>Describe your current invoicing process: What system is used, how/when are invoices sent, etc.</inlineHelpText>
    <label>Invoicing Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>