force-app/main/default/objects/Billing_Assessment__c/fields/Last_Modified_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Yesterday__c</fullName>
    <description>field to capture that the record was modified yesteday</description>
    <formula>datevalue( LastModifiedDate ) == Today()-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Yesterday</label>
    <type>Checkbox</type>
</CustomField>