force-app/main/default/objects/Billing_Assessment__c/fields/Legal_Entities__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entities__c</fullName>
    <inlineHelpText>How many legal entities do you have?</inlineHelpText>
    <label>Legal Entities</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>