force-app/main/default/objects/Billing_Assessment__c/fields/Localization__c.field-meta.xml
<CustomField>
    <fullName>Localization__c</fullName>
    <inlineHelpText>What localization requirements are in scope for this implementation? (Specific languages, currencies, offerings, etc.)</inlineHelpText>
    <label>Localization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>