force-app/main/default/objects/Billing_Assessment__c/fields/Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Lockbox__c</fullName>
    <inlineHelpText>If so, please explain how your existing integration / matching process works?</inlineHelpText>
    <label>Lockbox</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>