force-app/main/default/objects/Billing_Assessment__c/fields/Multi_Year_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Contracts__c</fullName>
    <inlineHelpText>Do you have contracts that represent multiple years (escalators or ramp plans) or represent a trial or free period?</inlineHelpText>
    <label>Multi-Year Contracts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>