force-app/main/default/objects/Billing_Assessment__c/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <inlineHelpText>How/when do customers receive notification of late payment?</inlineHelpText>
    <label>Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>