force-app/main/default/objects/Billing_Assessment__c/fields/Number_of_Invoices_per_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices_per_month__c</fullName>
    <inlineHelpText>What is the largest number of invoices sent in a calendar month?</inlineHelpText>
    <label>Number of Invoices per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>