force-app/main/default/objects/Billing_Assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billing Assessments</relationshipLabel>
    <relationshipName>Billing_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>