force-app/main/default/objects/Billing_Assessment__c/fields/OrderingProcess__c.field-meta.xml
<CustomField>
    <fullName>OrderingProcess__c</fullName>
    <inlineHelpText>After a contract has been signed, are order(s) automatically placed, or is there an internal review process (i.e., ensuring a PO has been received) prior to placing orders?  Once orders are placed, is everything on the quote ordered at the same time?</inlineHelpText>
    <label>Ordering Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>