force-app/main/default/objects/Billing_Assessment__c/fields/Orders_Are_Orders_being_created_in_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Orders_Are_Orders_being_created_in_CPQ__c</fullName>
    <inlineHelpText>Are orders current being created in CPQ?</inlineHelpText>
    <label>Orders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>