force-app/main/default/objects/Billing_Assessment__c/fields/Orders_Desired_Order_Process__c.field-meta.xml
<CustomField>
    <fullName>Orders_Desired_Order_Process__c</fullName>
    <label>Desired Order Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>