force-app/main/default/objects/Billing_Assessment__c/fields/Other_Billing_Templates__c.field-meta.xml
<CustomField>
    <fullName>Other_Billing_Templates__c</fullName>
    <inlineHelpText>Are additional Billing templates required? (Payment receipts, proration templates, Credit/Debit Memo, etc.)</inlineHelpText>
    <label>Other Billing Templates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>