force-app/main/default/objects/Billing_Assessment__c/fields/Output_DocUploaded__c.field-meta.xml
<CustomField>
    <fullName>Output_DocUploaded__c</fullName>
    <inlineHelpText>Upload one example of each format of output document. For example, you may send a simple Quote prior to sending a more complete Contract. with terms and conditions and signature lines. Output documents may also vary by sales channel or division.</inlineHelpText>
    <label>Sample Documents Uploaded</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No - Need to design as part of the project</fullName>
            </value>
            <value>
                <fullName>Yes - Minimal change anticipated</fullName>
            </value>
            <value>
                <fullName>Yes - Significant changes anticipated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>