force-app/main/default/objects/Billing_Assessment__c/fields/Output_Needs__c.field-meta.xml
<CustomField>
    <fullName>Output_Needs__c</fullName>
    <inlineHelpText>Describe when each type of output document is used. For example, a Quote document might be used to negotiate price and then contract document with signature lines is sent.</inlineHelpText>
    <label>Describe Your Output Document Needs</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>