force-app/main/default/objects/Billing_Assessment__c/fields/Output_UnqFormats__c.field-meta.xml
<CustomField>
    <fullName>Output_UnqFormats__c</fullName>
    <label>Count of Unique Output Document Formats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>