force-app/main/default/objects/Billing_Assessment__c/fields/Over_Payments__c.field-meta.xml
<CustomField>
    <fullName>Over_Payments__c</fullName>
    <inlineHelpText>Do you allow customers to overpay on an invoice and keep a balance on the account?</inlineHelpText>
    <label>Over Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>