force-app/main/default/objects/Billing_Assessment__c/fields/Partial_Payments__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payments__c</fullName>
    <inlineHelpText>Do you accept partial payments on invoices?</inlineHelpText>
    <label>Partial Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>