force-app/main/default/objects/Billing_Assessment__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <inlineHelpText>What types of payments do you support?</inlineHelpText>
    <label>Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>LBX</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Other-Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>