force-app/main/default/objects/Billing_Assessment__c/fields/Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans__c</fullName>
    <inlineHelpText>Do you allow customers to have custom payment arrangements outside of standard payment terms? (i.e. Net30)</inlineHelpText>
    <label>Payment Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>