force-app/main/default/objects/Billing_Assessment__c/fields/PlansforMobilephonetablet__c.field-meta.xml
<CustomField>
    <fullName>PlansforMobilephonetablet__c</fullName>
    <inlineHelpText>Do you currently have users on Salesforce1 or managing Opportunities and/or Quotes on a phone or tablet.</inlineHelpText>
    <label>Plans for Mobile (phone/tablet)</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>