force-app/main/default/objects/Billing_Assessment__c/fields/PlansforSalesforceLightning__c.field-meta.xml
<CustomField>
    <fullName>PlansforSalesforceLightning__c</fullName>
    <inlineHelpText>Do you currently have users on the Lightning interface or is everyone on Classic?  If currently all Classic, do you have plans to move to Lightning?</inlineHelpText>
    <label>Plans for Salesforce Lightning</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>