force-app/main/default/objects/Billing_Assessment__c/fields/Price_PricebookCount__c.field-meta.xml
<CustomField>
    <fullName>Price_PricebookCount__c</fullName>
    <inlineHelpText>How many Pricebooks are active in your production environment?</inlineHelpText>
    <label>Number of Active Pricebooks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>