force-app/main/default/objects/Billing_Assessment__c/fields/Price_PricebookUsage__c.field-meta.xml
<CustomField>
    <fullName>Price_PricebookUsage__c</fullName>
    <inlineHelpText>If you are using more than one pricebook (or one but it is not the Standard pricebook), please describe your pricebook strategy.</inlineHelpText>
    <label>How are Pricebooks Used</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>