force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Billing_Frequency__c</fullName>
    <inlineHelpText>What Billing intervals do you invoice your customers?</inlineHelpText>
    <label>Billing Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>