force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>