force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Charge_Types__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Charge_Types__c</fullName>
    <inlineHelpText>What types of products do you currently sell?</inlineHelpText>
    <label>Charge Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>