force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Decimal_Places__c</fullName>
    <inlineHelpText>How many decimal places do you display for product pricing?</inlineHelpText>
    <label>Pricing Decimal Places</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>