force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Product_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Product_Pricing__c</fullName>
    <inlineHelpText>How are products priced?</inlineHelpText>
    <label>Product Pricing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% of Total</fullName>
            </value>
            <value>
                <fullName>Discount Schedules</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Cost+</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Custom/Lookup-No usage Volume Discounting allowed</fullName>
                <label>Custom/Lookup-No usage Volume Discounting Included</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>