force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Product_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Product_Structure__c</fullName>
    <label>Product Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bundles</fullName>
            </value>
            <value>
                <fullName>Stand-Alone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>