force-app/main/default/objects/Billing_Assessment__c/fields/Pricing_Tax_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tax_Rule__c</fullName>
    <label>Tax Rule</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>