force-app/main/default/objects/Billing_Assessment__c/fields/Prod_BundleConsiderations__c.field-meta.xml
<CustomField>
    <fullName>Prod_BundleConsiderations__c</fullName>
    <inlineHelpText>Do you think Salesforce CPQ &quot;bundles&quot; will be used to 1) Create packages made up of individual products 2) Select components to configure a single overall product.</inlineHelpText>
    <label>Bundling Considerations</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>